# Resume-optimizer

./: .gitignore  CORRECTIONS_APPLIED.md  PROJECT_MAP.md  README.md  SECURITY_NOTICE.md  WINDOWS_SETUP.md  alembic.ini  apply-non-destructive-studio-merge.ps1  foundit_api_debug.json  indeed_login (1).py  indeed_login.py  indeed_login2.py  last_fetch_debug.html  linkedin_login.py  main.py  opencode.example.json  pyproject.toml  requirements.txt  theme.py  web_main.py
.github/workflows/: ci.yml
.opencode/agent/: claude.md  gemini.md  ollama.md  openai.md
app/: api.py  ats_engine.py  config_old.py  logging_config.py  schemas.py  validators.py
app/ai/: ollama_client.py  post_processor.py  prompts.py
app/application/: __init__.py  analyze_resume.py  compile_from_profile.py  import_resume.py  optimize_resume.py
app/config/: __init__.py  config.json  config_manager.py
app/core/: __init__.py  paths.py  settings.py
app/data/: __init__.py  salary_benchmarks.py
app/database/: __init__.py  db.py  engine.py  migrate.py  models.py  session.py
app/domain/: __init__.py  agent.py  analysis.py  bullet_writer.py  certification.py  content_check.py  discovery.py  evidence.py  fact_guard.py  job_requirements.py  keyword_targeting.py  master_profile.py  optimization.py  pipeline.py  requirement_matrix.py  resume.py  salary.py  scoring.py  skill_gap.py  skill_lexicon.py  templates.py
app/engines/: ats_engine.py  auto_fit.py  content_checker.py  diff_highlight.py  fact_guard.py  (+1 more)
foundit_profile/: Local State
indeed_profile/: Local State  first_party_sets.db
linkedin_profile/: Last Browser  Local State
migrations/: env.py
tasks/: plan.md  plan_phase7.md  plan_phase8_9.md  plan_rezi_ui.md  plan_sprint3.md  roadmap_rezi.md  todo.md  todo_phase7.md  todo_rezi_ui.md  todo_sprint3.md
tests/: test_agent.py  test_ats_engine.py  test_backup.py  test_browser_fetcher.py  test_bullet_writer.py  test_career_search.py  test_comparison.py  test_cover_letter.py  test_cv_import_regressions.py  test_diff_highlight.py  test_discovery.py  test_document_reader.py  test_evidence_vault.py  test_exporter.py  test_fact_guard.py  test_global_search.py  test_job_fetcher.py  test_keyword_targeting.py  test_master_profile.py  test_migrations.py  test_ollama_cancellation.py  test_ollama_client.py  test_onboarding.py  test_optimizer.py  test_p0_regression.py  test_parser.py  test_parser_fact_guard.py  test_parser_fallback.py  test_phase6.py  test_phase9.py  test_post_processor.py  test_profile_compiler.py  test_requirement_matrix.py  test_resignation_letter.py  test_salary_estimator.py  test_scoring_engine.py  test_settings.py  test_skill_gap.py  test_skill_gap_salary.py  test_studio.py  (+5 more)
(+978 files in other folders)
