[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-optimizer"
version = "1.0.0"
description = "Local AI-powered ATS resume optimization and tailoring desktop application"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.11,<7",
    "SQLAlchemy>=2.0.50,<2.1",
    "pydantic>=2.13,<2.14",
    "PyMuPDF>=1.27,<1.28",
    "python-docx>=1.1,<2",
    "requests>=2.34,<2.35",
    "beautifulsoup4>=4.12,<4.13",
    "lxml>=5.0,<7",
    "alembic>=1.15,<1.16",
    "playwright>=1.45,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
