[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-optimizer"
version = "1.1.0"
description = "Local-first desktop and web career workspace for ATS resume optimization and tailoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.11,<7",
    "SQLAlchemy>=2.0.50,<2.1",
    "pydantic>=2.13,<2.14",
    "PyMuPDF>=1.27,<1.28",
    "python-docx>=1.1,<2",
    "requests>=2.34,<2.35",
    "beautifulsoup4>=4.12,<4.13",
    "lxml>=5.0,<7",
    "alembic>=1.15,<1.16",
    "circuitbreaker>=2.0,<3",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.18",
]
dev = [
    "pytest>=9.1,<10",
    "pytest-qt>=4.4,<5",
    "pytest-cov>=7,<8",
    "ruff>=0.12,<1",
    "mypy>=1.16,<2",
    "httpx>=0.27,<1",
]
browser = [
    "playwright>=1.45,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
